	Add resize/expand to content option

Version 1.3.5:
	Fix bug in FF making pasting via right click difficult when empty
		- Thanks to Nibogo2 for reporting
	Added readonly method and option
	Added expandToContent method
	Reorgernised themes to their own directory.
	Changed themes to be in .less format and added to build file
	Added modern theme
	Added office-toolbar and office themes

Version 1.3.4:
	Updated focus method to work in source mode
	Added public inSourceMode method
	Fix bug causing BBCodes to be striped
		- Thanks to Nibogo2 for reporting

Version 1.3.3:
	Added dropDownCss option, thanks to @esion
	Add txtExec option to setCommand function
	Updated BBCode plugin to support some BBCodes in source mode
	Updated editor to disable AYT emotion converstion if emotions is not in toolbar
	Fixed rare problem with value not being subbmited
		- Thanks to Marco for reporting
	Added experimental paste filtering

Version 1.3.2:
	Created rangeHelper class to improve code quality
	Fix bug with IE8 and below related to newlines
	Updated to remove empty BBCodes such as [b][/b]

Version 1.3.1:
	Add emoticonsRoot option. Allows adding a root URL to be prepended to all emoticons.
		- Thanks to @primehalo for the idea
	Fix IE9 bug showing resize handles
	Fix IE ranges sometimes causing the last typed charecter to be unselected
		- Thanks to Maxime Lemercier for repoting
	
Version 1.3.0:
	Add package.json file
	Add Contribute to README
	Add GitHub pages page
	Fix newline bug. This greatly improves the BBCode to HTML parsers handling of newlines.

Version 1.2.9:
	Started on improving accessibility
	Added charset option
	Updated quote command to support authors
	Fix Webkit based bug causing newlines not to be added sometimes
		- Thanks to Robin for reporting and extra help providing information
	Added Swedish translation kindly submitted by Robin
	Added French translation kindly submitted by Nicolas
	Fix extra newlines being included in quotes